공통코드 후속작업